Added placeholder for search bar.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col-md-12">
                 <form role="form" class="form-inline">
                     <div class="input-group">
-                        <input type="text" id="query" class="form-control input-lg">
+                        <input type="text" id="query" class="form-control input-lg" placeholder="Search for video">
                         <div class="input-group-btn">
                             <span class="btn btn-default btn-lg disabled">Autoplay</span>
                             <button class="btn btn-success btn-lg js-toggle-btn js-autoplay-on" data-state="true">On</button>
